Converted tc-tour page to using ion-img instead of img tags to improve performance. Deleted unused modal components.

--- a/src/app/pages/tc-tour/tc-tour.page.scss
+++ b/src/app/pages/tc-tour/tc-tour.page.scss
@@ -27,7 +27,7 @@ ion-spinner {
   // border-style: solid;
   overflow: hidden;
   // box-shadow: 2px 4px 10px grey;
-  img {
+  ion-img {
     filter: blur(5px);
     position: relative;
     top: 50%;
