--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>
-        <!-- <img src="assets/img/whiteturtle.png" width="40px" style="display:inline-block" height="40px"/> -->
+        <!-- <ion-img src="assets/img/whiteturtle.png" width="40px" style="display:inline-block" height="40px"></ion-img> -->
         <!-- <ion-icon name="paw"></ion-icon> -->
       {{pageName}}
     </ion-title>
