--- a/src/app/shared/pwa-prompt/pwa-prompt.component.scss
+++ b/src/app/shared/pwa-prompt/pwa-prompt.component.scss
@@ -85,11 +85,9 @@ div.md-inner-slide {
   height: 450px;
   top: 50%;
   transform: translateY(-50%);
-  left: 0;
-  right: 0;
+  left: 10%;
+  right: 10%;
   border-radius: 1em;
-  margin-left: 10%;
-  margin-right: 10%;
   background-color: white;
   text-align: center;
   ion-button.md-close-button {
