--- a/src/app/pages/tc-tour/tc-tour.page.html
+++ b/src/app/pages/tc-tour/tc-tour.page.html
@@ -7,27 +7,22 @@
         <ion-label> {{ imgService.totalViewed }} / {{ imgService.total }} Signs Viewed </ion-label>
       </ion-chip>
     </div>
-    <!-- <div style="display: flex; flex-direction: row;"> -->
       <ion-button style=" flex: 0 0 auto;" color="secondary" (click)="reset()">
         Reset All
       </ion-button>
-    <!-- </div> -->
-    <div style="flex: 1 0 auto;" [ngStyle]="{ 'visibility' : loading ? 'visible' : 'hidden' }">
-      <ion-spinner color="primary"></ion-spinner>
-    </div>
-    <div class="scroll-container" [ngStyle]="{ 'visibility' : loading ? 'hidden' : 'visible' }">
+    <div class="scroll-container">
       <ion-grid>
         <ion-row>
           <!-- <ion-col size="4" *ngFor="let obj of signs">
           <div class="sign-button-unviewed" (click)="showModal(obj)">
-            <img src="assets/img/signs/{{ obj.id }}"/>
+            <ion-img src="assets/img/signs/{{ obj.id }}"></ion-img>
             <div></div>
             <ion-label>{{ obj.id + 1 }}</ion-label>
           </div>
         </ion-col> -->
           <ion-col size="4" *ngFor="let obj of imgService.images; let i = index">
             <div [class]="'sign-button ' + (obj.viewed ? 'viewed' : 'unviewed')" (click)="showZoom(i)">
-              <img [src]="obj.path" />
+              <ion-img [src]="obj.path"></ion-img>
               <div></div>
               <ion-label>{{ i + 1 }}</ion-label>
             </div>
