Standardized app button sizing.

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -25,7 +25,7 @@
   
     <ion-row>
       <ion-col>
-        <div style="display: flex; flex-direction: row;">
+        <div class="button-row">
           <ion-button (click)="buttonHandler('http://www.southeastern.edu/acad_research/programs/turtle_cove/index.html')">
             <ion-icon name="desktop"></ion-icon>
             <span>Our Website</span>
