--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,7 +1,12 @@
+.button-row {
+  display: flex;
+  flex-direction: row;
+}
+
 ion-button {
   flex-grow: 1;
   flex-basis: 50%;
-  padding: 2px;
+  // padding: 2px;
   ion-icon {
     padding-right: 0.5em;
   }
