--- a/src/app/pages/tc-tour/tc-tour.page.scss
+++ b/src/app/pages/tc-tour/tc-tour.page.scss
@@ -2,7 +2,8 @@ ion-button {
   // flex-grow: 1;
   // flex-basis: 50%;
   flex-shrink: 0;
-  padding: 0 5px;
+  // padding: 0 5px;
+  margin: 2%;
 }
 
 ion-spinner {
