--- a/src/app/pages/tc-tour/tc-tour.page.html
+++ b/src/app/pages/tc-tour/tc-tour.page.html
@@ -10,7 +10,10 @@
     <ion-button style=" flex: 0 0 auto;" color="secondary" (click)="reset()">
       Reset All
     </ion-button>
-    <div class="scroll-container">
+    <div style="flex: 1 0 auto;" [ngStyle]="{ 'visibility' : loading ? 'visible' : 'hidden' }">
+      <ion-spinner color="primary"></ion-spinner>
+    </div>
+    <div class="scroll-container" [ngStyle]="{ 'visibility' : loading ? 'hidden' : 'visible' }">
       <ion-grid>
         <ion-row>
           <!-- <ion-col size="4" *ngFor="let obj of signs">
@@ -22,7 +25,7 @@
         </ion-col> -->
           <ion-col size="4" *ngFor="let obj of imgService.images; let i = index">
             <div [class]="'sign-button ' + (obj.viewed ? 'viewed' : 'unviewed')" (click)="showZoom(i)">
-              <ion-img [src]="obj.path"></ion-img>
+              <ion-img [src]="obj.path" (ionImgDidLoad)="imgLoaded()"></ion-img>
               <div></div>
               <ion-label>{{ i + 1 }}</ion-label>
             </div>
