Added install counter service. Added basic app install counter on About page. Made contact info card on About page not use a bunch of ion-card-content tags because that's just stupid... Made the contact info have links for calling and emailing. Fixed Home page buttons overflowing off of screen on smaller devices. Made buttons on Home page and GW-Tour page sticky at the bottom of the page.

--- a/src/app/pages/gw-tour/gw-tour.page.html
+++ b/src/app/pages/gw-tour/gw-tour.page.html
@@ -12,43 +12,36 @@
     </ion-row>
   </ion-grid>
    -->
-  <ion-grid>
-    <ion-row>
-      <ion-col>
-        <ion-card>
-          <img src="assets/img/greenway.jpg"/>
-          <ion-card-header>
-            <ion-card-subtitle>Manchac, LA</ion-card-subtitle>
-            <ion-card-title>Manchac Greenway</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-              The Manchac Greenway provides the general public a look inside the natural
-              environment of Louisiana’s robust marsh and swamp ecosystems. Despite already having
-              maintained trails that are open to public access, most people are either unaware or unmotivated
-              to utilize this area on their own. By hosting tours under the guidance of biologists trained in the
-              Manchac ecosystems, we can attract more attention to these underappreciated areas and educate
-              the local communities about their own surrounding habitat. This also provides a fundraising
-              opportunity for eligible biology graduate students and qualified undergraduates at Southeastern
-              Louisiana University, as well as partnering groups who already support the Greenway and will
-              assist in its further development in the future.
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col>
-        <div style="display: flex; flex-direction: row;">
-          <ion-button (click)="buttonHandler()" >
-            <ion-icon name="car"></ion-icon>
-            <span>Take the Tour</span>
-          </ion-button>
-          <ion-button color='secondary' routerLink="/gw-stops">
-            <ion-icon name="pin"></ion-icon>
-            <span>View Stops</span>
-          </ion-button>
-        </div>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <div class="content-container">
+    <div style="height: 100%; overflow-y: scroll;">
+      <ion-card>
+        <img src="assets/img/greenway.jpg" />
+        <ion-card-header>
+          <ion-card-subtitle>Manchac, LA</ion-card-subtitle>
+          <ion-card-title>Manchac Greenway</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          The Manchac Greenway provides the general public a look inside the natural
+          environment of Louisiana’s robust marsh and swamp ecosystems. Despite already having
+          maintained trails that are open to public access, most people are either unaware or unmotivated
+          to utilize this area on their own. By hosting tours under the guidance of biologists trained in the
+          Manchac ecosystems, we can attract more attention to these underappreciated areas and educate
+          the local communities about their own surrounding habitat. This also provides a fundraising
+          opportunity for eligible biology graduate students and qualified undergraduates at Southeastern
+          Louisiana University, as well as partnering groups who already support the Greenway and will
+          assist in its further development in the future.
+        </ion-card-content>
+      </ion-card>
+    </div>
+    <div style="display: flex; flex-direction: row;">
+      <ion-button (click)="buttonHandler()">
+        <ion-icon name="car"></ion-icon>
+        <span>Take the Tour</span>
+      </ion-button>
+      <ion-button color='secondary' routerLink="/gw-stops">
+        <ion-icon name="pin"></ion-icon>
+        <span>View Stops</span>
+      </ion-button>
+    </div>
+  </div>
 </ion-content>
