--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,12 +1,16 @@
 .button-row {
   display: flex;
   flex-direction: row;
+  margin-top: 5px;
+}
+
+.button-container {
+  padding: 0 5px 5px 5px;
 }
 
 ion-button {
-  flex-grow: 1;
-  flex-basis: 50%;
-  // padding: 2px;
+  flex: 1 1 50%;
+  min-width: 0;
   ion-icon {
     padding-right: 0.5em;
   }
