--- a/src/app/pages/checklist/checklist.page.html
+++ b/src/app/pages/checklist/checklist.page.html
@@ -41,25 +41,28 @@
               </ion-label>
             </ion-chip>
           </ion-item-divider>
-          <ng-container *ngFor="let letter of alphabet">
-            <ion-item-group *ngIf="obj.expanded && (obj.species | filterSpeciesByNameStartsWith : letter)">
-              <ion-item-divider style="background-color: lightgray; z-index: 0;" mode="ios">{{ letter }}
-              </ion-item-divider>
-              <ng-container
-                *ngFor="let species of (obj.species | filterSpeciesByNameStartsWith : letter); let j = index">
-                <ion-item
-                  [attr.lines]="(j == (obj.species | filterSpeciesByNameStartsWith : letter).length - 1) ? 'none' : 'inset'">
-                  <div>
-                    <ion-label>{{ species.name }}</ion-label>
-                    <ion-note style="font-style: italic;">{{ species.nomenclature }}</ion-note>
-                  </div>
-                  <ion-checkbox color="primary" slot="start" [(ngModel)]="species.checked" (ionChange)="checkChanged()">
-                  </ion-checkbox>
-                  <ion-icon style="z-index: 99;" slot="end" (click)="openSpeciesInfo(species.id, obj)"
-                    name="information-circle-outline"></ion-icon>
-                </ion-item>
-              </ng-container>
-            </ion-item-group>
+          <ng-container *ngIf="obj.expanded">
+            <ng-container *ngFor="let letter of alphabet">
+              <ion-item-group *ngIf="(obj.species | filterSpeciesByNameStartsWith : letter)">
+                <ion-item-divider style="background-color: lightgray; z-index: 0;" mode="ios">{{ letter }}
+                </ion-item-divider>
+                <ng-container
+                  *ngFor="let species of (obj.species | filterSpeciesByNameStartsWith : letter); let j = index">
+                  <ion-item
+                    [attr.lines]="(j == (obj.species | filterSpeciesByNameStartsWith : letter).length - 1) ? 'none' : 'inset'">
+                    <div>
+                      <ion-label>{{ species.name }}</ion-label>
+                      <ion-note style="font-style: italic;">{{ species.nomenclature }}</ion-note>
+                    </div>
+                    <ion-checkbox color="primary" slot="start" [(ngModel)]="species.checked"
+                      (ionChange)="checkChanged()">
+                    </ion-checkbox>
+                    <ion-icon style="z-index: 99;" slot="end" (click)="openSpeciesInfo(species.id, obj)"
+                      name="information-circle-outline"></ion-icon>
+                  </ion-item>
+                </ng-container>
+              </ion-item-group>
+            </ng-container>
           </ng-container>
         </ng-container>
       </ion-item-group>
