Removed install counter for now.

--- a/src/app/pages/info/info.page.html
+++ b/src/app/pages/info/info.page.html
@@ -10,7 +10,7 @@
 <tc-header pageName="About"></tc-header>
 
 <ion-content>
-  <ion-card *ngIf="installCount">
+  <!-- <ion-card *ngIf="installCount">
     <ion-card-header>
       <ion-card-title>
         App Installs
@@ -19,7 +19,7 @@
     <ion-card-content>
       {{ installCount }}
     </ion-card-content>
-  </ion-card>
+  </ion-card> -->
 
   <ion-card (click)="buttonHandler()">
     <img src="assets/img/tcMap.jpg" />
