--- a/src/app/shared/zoom/zoom.component.html
+++ b/src/app/shared/zoom/zoom.component.html
@@ -9,7 +9,7 @@
 </ion-header>
 
 <ion-content fullscreen scrollY="false">
-  <ion-slides style="height: 100%;" [options]="sliderOptions" #slider (ionSlideDidChange)="slideChanged()">
+  <ion-slides *ngIf="viewEntered" style="height: 100%;" [options]="sliderOptions" #slider (ionSlideDidChange)="slideChanged()">
     <ion-slide *ngFor="let obj of imgService.images">
       <div class="swiper-zoom-container">
         <img [src]="obj.path"/>
